# rust-os

./: Cargo.toml  README.md  boot.md  kernel refactor instructions.md  linux-x86 64-abi-guide.html  memory allocators.md  multiboot-design.md  multiboot2.rs  test-runner.sh
.cargo/: config.toml
abalone/: Cargo.toml
abalone/src/: buddy.rs  bump.rs  lib.rs  slab.rs  tlsf.rs
alloc_files/: Cargo.toml  allocator integration.md  allocator_integration.md  buddy.rs  lib.rs  limine.rs  linker.ld  main.rs  mod.rs  slab.rs  tlsf.rs  x86_64-bare-metal.json
alloc_files/mnt/user-data/outputs/allocators/kernel/: Cargo.toml
alloc_files/mnt/user-data/outputs/allocators/kernel/src/: main.rs
alloc_files/mnt/user-data/outputs/allocators/shared/: Cargo.toml
alloc_files/mnt/user-data/outputs/allocators/shared/src/: lib.rs
alloc_files/mnt/user-data/outputs/allocators/userspace/app/: Cargo.toml
alloc_files/mnt/user-data/outputs/allocators/userspace/profiled/: Cargo.toml
archived_design_files/: memory_allocators.md
barnacle/: Cargo.toml  build.rs  kernel.ld  limine-rust-kernel-build-spec.md  multiboot-design.md
barnacle/.cargo/: config.toml
barnacle/docs/: barnacle.md
barnacle/src/: lib.rs  main.rs
barnacle/src/boot/: boot.asm
barnacle/src/info/: memory.rs  mod.rs
carapace/: Cargo.toml
chalae/: Cargo.toml
crusty_bootloader/: Cargo.toml
crusty_os/: Cargo.toml  build.rs  kernel_bitwise.md  limine.ld  test-runner.sh  x86_64-crusty_os.json
crusty_os/.cargo/: config.toml
crusty_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
crusty_os/src/allocator/: buddy.rs  bump.rs  dummy.rs  linked_list.rs  mod.rs  slab.rs  tlsf.rs
crusty_os/src/boot/: limine.rs  mod.rs  multiboot2.rs
crusty_os/src/interrupts/: apic.rs  dispatch.rs  exceptions.rs  handlers.rs  interrupts-implementation.md  mod.rs  pic.rs  stats.rs  vectors.rs
crusty_os/src/virtual_hardware/: interrupts.rs  serial.rs
crusty_os/tests/: basic_boot.rs  heap_allocation.rs  heap_stress.rs  interrupt_handlers.rs  should_panic.rs  stack_overflow.rs
framework/: Cargo.toml
framework/src/: lib.rs
isoroot/boot/grub/: grub.cfg
platform/: Cargo.toml
platform/src/: lib.rs
test_kernel/: Cargo.toml  build.rs
test_kernel/.cargo/: config.toml
test_kernel/src/: main.rs
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: main.rs
