[workspace]
members = ["framework", "platform", "crusty_os", "bitwise", "barnacle", "abalone", "test_kernel", "chalae", "chitin", "carapace"]
# test_kernel excluded from the default build set — it's built explicitly via `cargo xtask run`
default-members = ["framework", "platform", "crusty_os", "bitwise", "barnacle", "abalone"]
# xtask is NOT a workspace member: it targets the host, not the bare-metal cross target
resolver = "3"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = false
opt-level = 3
lto = "thin"
