[package]
name    = "barnacle"
version = "0.1.0"
edition = "2024"
links   = "barnacle_boot"

[lib]
name    = "barnacle"
path    = "src/lib.rs"
test    = false
doctest = false

[dependencies]
framework  = { path = "../framework" }
multiboot2 = { version = "0.24", default-features = false }

[build-dependencies]
# none — build.rs uses std only
