
# Cargo.toml

[[bin]]
name = "crusty_os"
test = false
bench = false

[package]
name = "crusty_os"
version = "0.1.0"
edition = "2024"
authors = ["Louis Casinelli"]

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
