
# Cargo.toml

[[bin]]
name = "crusty_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package]
name = "crusty_os"
version = "0.1.0"
edition = "2024"
authors = ["Louis Casinelli"]

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio",
  "-display", "none",
  ]
test-success-exit-code = 33
test-timeout = 300

[dependencies]
bootloader = {version = "0.9.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.8"
uart_16550 = "0.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
