
# Cargo.toml

[[bin]]
name = "crusty_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package]
name = "crusty_os"
version = "0.1.0"
edition = "2024"
authors = ["Louis Casinelli"]

[features]
# Exactly one boot feature must be active per binary build.
default         = ["boot-multiboot2"]
boot-multiboot2 = ["dep:barnacle"]
boot-limine     = ["dep:limine"]

[dependencies]
framework  = { path = "../framework" }
platform   = { path = "../platform" }
abalone    = { path = "../abalone" }
barnacle   = { path = "../barnacle", optional = true }
limine     = { version = "0.6", default-features = false, optional = true }
volatile   = "0.2.6"
spin       = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
x86_64     = "0.14.8"
pic8259    = "0.10.1"
pc-keyboard = "0.7.0"
bitwise    = { path = "../bitwise" }

[dependencies.lazy_static]
version  = "1.0"
features = ["spin_no_std"]
